# recon_vision

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/prompts/: docstring.prompt.md
app/: main.py
app/api/routes/: api.py  route.py  static_docs.py
app/core/: config.py  events.py
app/models/: act_entry.py  process_status.py  recon_act.py
app/services/: cache_in_disk.py  pdf_filler.py  pdf_parser.py
notebooks/: test_ocr.ipynb
tests/: conftest.py
tests/integration/: test_cache_integration.py  test_services_to_point.py
tests/unit/: test_cache_unit.py
tests/vision_core/: test_paragraph.py  test_table.py
tests/vision_core/detector/: test_cell_detector.py  test_paragraph_detector.py  test_table_detector.py
tests/vision_core/entities/: test_bbox.py  test_cell.py  test_paragraph.py
tests/vision_core/loader/: test_pdf_loader.py  test_real_document.py
tests/vision_core/ocr/: test_paddleocr_engine.py
tests/vision_core/preprocessor/: test_image_enhancement.py  test_metrics_collection.py  test_preprocessing_paragraph.py  (+1 more)
vision_core/: config.py
vision_core/analizer/: page_analizer.py  page_analyzer.py
vision_core/detector/: paragraph_detector.py  table_cell_detector.py  table_detector.py
vision_core/entities/: bbox.py  cell.py  page.py  paragraph.py  table.py
vision_core/loader/: pdf_loader.py
vision_core/ocr/: base.py  paddle_ocr.py
vision_core/preprocessor/: image_analyzer.py  image_enhancer.py  image_preprocessor.py  paragraph_preprocessor.py  table_preprocessor.py
vision_core/utils/: drawer.py
