[project]
requires-python = ">=3.9,<3.12"
name = "recon_vision"
version = "0.1.0"
description = "A short description of the project"
authors = [
    { name = "Sergey Krasnoslobodtsev", email = "solodeveloper.ai@gmail.com" },
]
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.29.0",
    "pydantic>=2.12.5",
    "requests>=2.32.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "diskcache>=5.6.3",
    "pymupdf>=1.26.5",
    "pillow>=11.3.0",
    "setuptools>=80.9.0",
    "deskew>=1.5.1",
    "paddlepaddle==3.2.2",
    "paddleocr==3.3.2",
    "super-image>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2",
    "pytest-asyncio>=0.20.3",
    "pytest-cov>=4.1.0",
    "black>=24.3",
    "autopep8>=2.0.0",
    "ipdb>=0.13.0",
    "pylint>=3.0.0",
    "radon>=6.0.1",
    "isort>=6.1.0",
]
aws = [
    "mangum>=0.17.0"
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

